--- a/index.html
+++ b/index.html
@@ -1,14 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <article class="search-bar">
+        <section class="search">
+            <input type="text" placeholder="ENTER A CITY NAME">
+            <button><img src="assets/media/search.png" alt="searchfield"></button>
+        </section>
+        <section class="weather-info">
+            <img src="assets/media/rain01.png" class="weather-icon">
+            <h1 class="temperature">22°c</h1>
+            <h2 class="city">Berlin</h2>
+            <div class="details">
+                <div class="col">
+                    <img src="assets/media/humidity01.png">
+                    <div>
+                        <p class="humidity">50%</p>
+                        <p>Humidity</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <img src="assets/media/wind02.png">
+                    <div>
+                        <p class="Wind">15 km/h</p>
+                        <p>Wind Speed</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </article>
+
 
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
