Added styling to search-bar and added visibility icon

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
                         <p>Wind Speed</p>
                     </div>
                 </div>
+                <div class="col">
+                    <img src="assets/media/visibility02.png">
+                    <div>
+                        <p class="Visibility">7 km</p>
+                        <p>Visibility</p>
+                    </div>
+                </div>
             </div>
         </section>
     </article>
