changed the added functionality and divided the code for better readability, added docstrings and tested the initial code

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
                 <div class="col">
                     <img src="assets/media/wind02.png">
                     <div>
-                        <p class="Wind">15 km/h</p>
+                        <p class="windspeed">15 km/h</p>
                         <p>Wind Speed</p>
                     </div>
                 </div>
                 <div class="col">
                     <img src="assets/media/visibility02.png">
                     <div>
-                        <p class="Visibility">7 km</p>
+                        <p class="visibility">7 km</p>
                         <p>Visibility</p>
                     </div>
                 </div>
@@ -44,7 +44,7 @@
         </section>
     </article>
 
-
+    
     <script src="assets/js/script.js"></script>
 </body>
 
