added functionality for weather-icon update and rearranged the codes for better readability

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>THE WEATHER APP</title>
 </head>
 
 <body>
     <article class="search-bar">
         <section class="search">
-            <input type="text" placeholder="ENTER A CITY NAME">
+            <input type="text" placeholder="ENTER A VALID CITY NAME">
             <button><img src="assets/media/search.png" alt="searchfield"></button>
         </section>
         <section class="weather-info">
