Created 2 new div containers. First 'div' contains the onscreendata like temp,cityname and weather-icon. Second 'div' is added that contains additional info about the weather. The data arrangement in the first div is also changed, now the temp and city is shown first.

--- a/index.html
+++ b/index.html
@@ -15,9 +15,16 @@
             <button><img src="assets/media/search.png" alt="searchfield"></button>
         </section>
         <section class="weather-info">
-            <img src="assets/media/rain01.png" class="weather-icon">
+        <div class="onscreendata">
             <h1 class="temperature">22°c</h1>
             <h2 class="city">Berlin</h2>
+            <img src="assets/media/rain01.png" class="weather-icon">
+        </div>
+        <div class="moreonscreendata">
+            <p class="feelsliketemp">Feels-like : 22°c</p>
+            <p class="tempmax">H : 22°c</p>
+            <p class="tempmin">L : 22°c</p>              
+        </div>
             <div class="details">
                 <div class="col">
                     <img src="assets/media/humidity01.png">
