Added a button in index.html to hide info like humidity,windspeed & visibility to keep the absolute minimum info on screen. In the style.css, removed the older property for the class'weather-info' and used new properties for the newly created 'div' containers.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <p class="tempmax">H : 22°c</p>
             <p class="tempmin">L : 22°c</p>              
         </div>
+            <button class="show-hide-button">Click To View More Details</button> 
             <div class="details">
                 <div class="col">
                     <img src="assets/media/humidity01.png">
@@ -50,8 +51,6 @@
             </div>
         </section>
     </article>
-
-    
     <script src="assets/js/script.js"></script>
 </body>
 
