Added a new code in the index.html for outfit suggestion. Created a simple function in javascript to suggest outfit according to the weather. Extended the event listener for the button to display and hide the outfit suggestion evertime a new location i sentered

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <p class="tempmin">L : 22°c</p>              
         </div>
             <button class="show-hide-button">Click To View More Details</button>
+            <p class="outfit-suggestion"></p>
             <div class="details">
                 <div class="col">
                     <img src="assets/media/humidity01.png">
