Changed the entire readme page to make it more descriptive. Added 'alt' texts to the index.html file, added validity check to ensure places with space in their names can be entered without error(places such as New York). Added a bunch of new snapshots in the media folder used in the readme file

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 
 <body>
     <article class="search-bar">
-        <section class="search">
+        <div class="search">
             <input type="text" placeholder="ENTER A VALID CITY NAME">
             <button><img src="assets/media/search.png" alt="searchfield"></button>
-        </section>
-        <section class="weather-info">
+        </div>
+        <div class="weather-info">
         <div class="onscreendata">
             <h1 class="temperature">22°c</h1>
             <h2 class="city">Berlin</h2>
-            <img src="assets/media/rain01.png" class="weather-icon">
+            <img src="assets/media/rain01.png" class="weather-icon" alt="Rain icon">
         </div>
         <div class="moreonscreendata">
             <p class="feelsliketemp">Feels-like : 22°c</p>
@@ -29,28 +29,28 @@
             <p class="outfit-suggestion"></p>
             <div class="details">
                 <div class="col">
-                    <img src="assets/media/humidity01.png">
+                    <img src="assets/media/humidity01.png" alt="Rain icon">
                     <div>
                         <p class="humidity">50%</p>
                         <p>Humidity</p>
                     </div>
                 </div>
                 <div class="col">
-                    <img src="assets/media/wind02.png">
+                    <img src="assets/media/wind02.png" alt="Wind icon">
                     <div>
                         <p class="windspeed">15 km/h</p>
                         <p>Wind Speed</p>
                     </div>
                 </div>
                 <div class="col">
-                    <img src="assets/media/visibility02.png">
+                    <img src="assets/media/visibility02.png" alt="Visibility icon">
                     <div>
                         <p class="visibility">7 km</p>
                         <p>Visibility</p>
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
     </article>
     <script src="assets/js/script.js"></script>
 </body>
